--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,10 @@ img {
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
+.main{
+    max-width: 100%;
+}
+
 .section {
     padding: 6rem 0 2rem;
 }
