--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -65,7 +65,7 @@
     background-size: cover;
     width: 300px;
     height: 300px;
-    box-shadow: inset 0 0 0 9px rgb(255 255 255 /30%);
+    box-shadow: inset 0 0 0 3px rgb(255 255 255 /30%);
     order: 1;
     justify-self: center;
     animation: profile__animate 8s ease-in-out infinite 1s;
@@ -73,15 +73,15 @@
 
 @keyframes profile__animate{
     0%{
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
     }
 
         50% {
-            border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+            border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
         }
 
                 100% {
-                    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+                    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
                 }
 }
 
@@ -90,7 +90,7 @@
 }
 
 .wheel{
-    animation: scroll 2s ease infinite;
+    animation: scroll 3s ease infinite;
 }
 
 @keyframes scroll {
@@ -99,7 +99,7 @@
 
     }
     30%{
-        transform: translateY(3.75rem);
+        transform: translateY(2.75rem);
     }
 }
 
@@ -113,4 +113,77 @@
 .home__scroll-arrow{
     font-size: 1.25rem;
     color: var(--title-color);
+}
+
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .home__content{
+        grid-template-columns: 100px repeat(2,1fr);
+        column-gap: 1.25rem;
+    }
+
+    .home__subtitle{
+        padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
+
+    }
+
+    .home__subtitle::before{
+        width: 42px;
+        top: .8rem;
+    }
+
+    .home__description{
+        max-width: initial;
+        margin-bottom: var(--mb-2-5);
+
+    }
+
+    .home__img{
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 2.5px rgb(255 255 255 /30%);
+    }
+
+    .home__scroll{
+        margin-left: 7.5rem;
+    }
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+   .home__content{
+        grid-template-columns: .5fr 3fr;
+        padding-top: 3.5rem;
+   }
+
+   .home__img{
+    order: initial;
+    justify-self: initial;
+   }
+
+   .home__data{
+    grid-column: 1/3;
+   }
+
+   .home__img{
+    box-shadow: inset 0 0 0 1px rgb(255 255 255 /30%);
+    width: 200px;
+    height: 200px;
+   }
+
+   .home__scroll{
+    display:none;
+   }
+}
+
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .home__img{
+        width: 180px;
+        height: 180px;
+    }
+
+    
 }
