add tab functionality to projects

--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -62,3 +62,8 @@
 .work__button:hover .work__button-icon{
     transform: translateX(.25rem);
 }
+
+.active-work{
+    background-color: var(--title-color);
+    color: var(--body-color);
+}
