--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -67,3 +67,50 @@
     background-color: var(--title-color);
     color: var(--body-color);
 }
+
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .work__container {
+        gap: 1.25rem;
+    }
+
+    .work__card{
+        padding: 1rem;
+    }
+
+    .work__img{
+        margin-bottom: .75rem;
+    }
+
+    .work__title{
+        margin-bottom: .25rem;
+    }
+
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+    .work__container{
+        grid-template-columns: max-content;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .work__container{
+        grid-template-columns: 1fr;
+    }
+    .work__img{
+        width: 100%
+    }
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .work__item{
+        font-size: var(--small-font-size)
+    }
+
+    .work__filters{
+        column-gap: .25rem;
+    }
+}
