--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -45,7 +45,14 @@
 
 .active-link,
 .nav__link:hover{
-    color: var(--title-color-dark);
+    /* color: rgb(134, 134, 134); */
+    color: var(--text-color);
+    text-decoration: underline;
+    text-underline-offset: .25rem;
+}
+
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
 }
 
 @media screen and (max-width:768px) {
