add error message

--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,11 @@ img {
         margin-right: var(--mb-1);
     }
 }
+
+/* Error Messages*/
+.error {
+    color: red;
+    padding: 0;
+    margin-bottom: 1rem;
+    margin-top: -3rem;
+}
